# tippyreloaded

./: .gitignore  .pre-commit-config.yaml  README.md  add_cd_to_pythonpath.sh  config.py  fileops.py  game.py  main.py  pyproject.toml  quotes.py  rankings.py  run_dev.py  soccer_quotes.json  stringmatching.py  team_synonymes.json  teamnames.py  test.yaml  tipps2324.txt  tips.py
tippyreloaded/: __init__.py  game.py  rankings.py  stringmatching.py  tips.py  views.py
tippyreloaded/config/: __init__.py  config_flask_dev.yaml  config_game_2324.yaml  config_game_2425.yaml  datamodels.py  enumerations.py  tipps2425.txt
tippyreloaded/templates/: table.html
